--- a/action.yml
+++ b/action.yml
@@ -38,3 +38,25 @@ runs:
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties', 'buildSrc/**/Versions.kt', 'buildSrc/**/Dependencies.kt', 'gradle/*.versions.toml', '**/versions.properties') }}
         restore-keys: |
           ${{ runner.os }}-gradle-
+
+    - uses: actions/cache@v4
+      name: Setup NPM Caching
+      # See https://github.com/actions/setup-node/blob/802632921f8532d2409ae6eac3313b6f81f11122/src/cache-utils.ts#L22
+      with:
+        path: |
+          ~/.npm
+          node_modules
+        key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json', 'npm-shrinkwrap.json', 'yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-npm-
+
+    - uses: actions/cache@v4
+      name: Setup Yarn Caching
+      # See https://github.com/actions/setup-node/blob/802632921f8532d2409ae6eac3313b6f81f11122/src/cache-utils.ts#L40
+      with:
+        path: |
+          ~/.config/yarn
+          node_modules
+        key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
