--- a/action.yml
+++ b/action.yml
@@ -23,9 +23,9 @@ runs:
       if: ${{ inputs.cache == 'maven' }}
       with:
         path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        key: enhanced-caching-${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
-          ${{ runner.os }}-maven-
+          enhanced-caching-${{ runner.os }}-maven-
 
     - uses: actions/cache@v4
       name: Setup SBT Caching
@@ -39,9 +39,9 @@ runs:
           ~/.m2
           !~/.sbt/*.lock
           !~/**/ivydata-*.properties
-        key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt', '**/project/build.properties', '**/project/**.scala', '**/project/**.sbt') }}
+        key: enhanced-caching-${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt', '**/project/build.properties', '**/project/**.scala', '**/project/**.sbt') }}
         restore-keys: |
-          ${{ runner.os }}-sbt-
+          enhanced-caching-${{ runner.os }}-sbt-
 
     - uses: actions/cache@v4
       name: Setup Gradle Caching
@@ -51,9 +51,9 @@ runs:
         path: |
           ~/.gradle/caches
           ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties', 'buildSrc/**/Versions.kt', 'buildSrc/**/Dependencies.kt', 'gradle/*.versions.toml', '**/versions.properties') }}
+        key: enhanced-caching-${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties', 'buildSrc/**/Versions.kt', 'buildSrc/**/Dependencies.kt', 'gradle/*.versions.toml', '**/versions.properties') }}
         restore-keys: |
-          ${{ runner.os }}-gradle-
+          enhanced-caching-${{ runner.os }}-gradle-
 
     - uses: actions/cache@v4
       name: Setup NPM Caching
@@ -63,9 +63,9 @@ runs:
         path: |
           ~/.npm
           **/node_modules
-        key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json', 'npm-shrinkwrap.json', 'yarn.lock') }}
+        key: enhanced-caching-${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json', '**/npm-shrinkwrap.json', '**/yarn.lock') }}
         restore-keys: |
-          ${{ runner.os }}-npm-
+          enhanced-caching-${{ runner.os }}-npm-
 
     - uses: actions/cache@v4
       name: Setup Yarn Caching
@@ -75,6 +75,6 @@ runs:
         path: |
           ~/.config/yarn
           **/node_modules
-        key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
+        key: enhanced-caching-${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
         restore-keys: |
-          ${{ runner.os }}-yarn-
+          enhanced-caching-${{ runner.os }}-yarn-
