--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,6 +6,12 @@ on:
     branches:
       - main
 
+
+#permissions:
+#  id-token: write
+#  contents: write
+#  pull-requests: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -13,4 +19,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      ## publish here
+      - name: Get Next Version
+        id: semver
+        uses: ietf-tools/semver-action@v1
+        with:
+          token: ${{ github.token }}
+          branch: ${{ github.event.repository.default_branch }}
+          noVersionBumpBehavior: patch
+
+      - name: Create Release
+        uses: ncipollo/release-action@v1.14.0
+        with:
+          allowUpdates: false
+          draft: false
+          prerelease: false
+          generateReleaseNotes: true
+          tag: ${{ steps.semver.outputs.next }}
+          token: ${{ github.token }}
