--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,6 +26,7 @@ jobs:
           token: ${{ github.token }}
           branch: ${{ github.event.repository.default_branch }}
           noVersionBumpBehavior: patch
+          fallbackTag: v0.0.1
 
       - name: Create Release
         uses: ncipollo/release-action@v1.14.0
