--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,9 +8,9 @@ on:
 
 
 #permissions:
-#  id-token: write
-#  contents: write
-#  pull-requests: write
+  id-token: read
+  contents: read
+  pull-requests: read
 
 jobs:
   deploy:
