--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,10 +7,10 @@ on:
       - main
 
 
-permissions:
+#permissions:
 #  id-token: read
-  contents: read
-  pull-requests: read
+#  contents: read
+#  pull-requests: read
 
 jobs:
   deploy:
@@ -26,7 +26,7 @@ jobs:
           token: ${{ github.token }}
           branch: ${{ github.event.repository.default_branch }}
           noVersionBumpBehavior: patch
-          fallbackTag: v0.0.1
+          noNewCommitBehavior: warn
 
       - name: Create Release
         uses: ncipollo/release-action@v1.14.0
